--- a/html/about.html
+++ b/html/about.html
@@ -295,8 +295,7 @@
                     <svg class="icon-idea" width="23" height="23">
                         <use href="../image/items/icons.svg#icon-plus"></use>
                     </svg>
-                    <span></span>
-                    Все работы
+                    <p>Все работы</p>
                 </a>
             </div>
         </section>
@@ -310,10 +309,10 @@
                 </div>
                 <div class="request">
                     <form action="">
-                            <input type="text" name="username" placeholder="Имя"> <br>
-                            <input type="tel" name="telephone" placeholder="Телефон"> <br>
-                            <input type="text" name="comment" placeholder="Комментарий к заявке"> <br>
-                            <input type="file" name="file">
+                            <input type="text" name="username" placeholder="Имя">
+                            <input type="tel" name="telephone" placeholder="Телефон">
+                            <input type="text" name="comment" placeholder="Комментарий к заявке">
+                            <input type="file" name="file" placeholder="Прикрепить файл">
                         <div class="request-button">
                             <button type="button">
                                 <span class="request-text-button">отправить</span>
