--- a/html/polygraphy.html
+++ b/html/polygraphy.html
@@ -325,8 +325,7 @@
                     <svg class="icon-idea" width="23" height="23">
                         <use href="../image/items/icons.svg#icon-plus"></use>
                     </svg>
-                    <span></span>
-                    Все работы
+                    <p>Все работы</p>
                 </a>
             </div>
         </section>
