--- a/html/about.html
+++ b/html/about.html
@@ -31,17 +31,22 @@
         </nav>
     </header>
     <main>
-        <!-- О компании -->
+        <!-- О компании часть 1-->
         <section class="section">
             <div class="container container-hero">
                 <div class="hero-title">
                     <h1 class="title-page">О компании</h1>
                     <p>Promomix – одна из крупнейших компаний на рекламном рынке Подмосковья.</p>
                 </div>
+            </div>
+        </section>
+        <!-- О компании часть 2-->
+        <section class="section bg-page">
+            <div class="container">
                 <div class="hero-image">
                     <img src="../image/about/image1.jpg" alt="Колектив из 8 человек ведут дискуссию">
                 </div>
-                <div class="advantages-list bg-page">
+                <div class="advantages-list ">
                     <ul class="list">
                         <li class="advantages-list-item">
                             <span class="text-title-color">18+</span>
@@ -163,14 +168,38 @@
             </div>
         </section>
         <!-- История -->
-        <section class="section">
+        <section class="section bg-page">
             <div class="container history-container">
                 <div class="history-title">
+                    <div class="history-title-text">
                     <p class="paragraph-page">История</p>
                     <h2 class="title-page">
                         <span class="text-title-color">18+</span>
                         лет опыта на рекламном рынке
                     </h2>
+                    </div>
+                        <ul>
+                            <li class="list-item-history">
+                                <svg width="61" height="61">
+                                    <use href="../image/items/icons.svg#icon-circle"></use>
+                                </svg>
+                            </li>
+                            <li class="list-item-history">
+                                <svg width="61" height="61">
+                                    <use href="../image/items/icons.svg#icon-circle"></use>
+                                </svg>
+                            </li>
+                            <li class="list-item-history">
+                                <svg width="61" height="61">
+                                    <use href="../image/items/icons.svg#icon-circle"></use>
+                                </svg>
+                            </li>
+                            <li class="list-item-history">
+                                <svg width="61" height="61">
+                                    <use href="../image/items/icons.svg#icon-circle"></use>
+                                </svg>
+                            </li>
+                        </ul>
                 </div>
                 <ul class="history-title">
                     <li>
