--- a/html/about.html
+++ b/html/about.html
@@ -41,12 +41,10 @@
             </div>
         </section>
         <!-- О компании часть 2-->
-        <section class="section bg-page">
-            <div class="container">
-                <div class="hero-image">
+        <section class="section bg-page hero-list">
+            <div class="container qwerty">
+                <div class="advantages-list">
                     <img src="../image/about/image1.jpg" alt="Колектив из 8 человек ведут дискуссию">
-                </div>
-                <div class="advantages-list ">
                     <ul class="list">
                         <li class="advantages-list-item">
                             <span class="text-title-color">18+</span>
